--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script
+      id="react-dotenv"
+      src="https://github.com/Creeper315/for-lily.git/env.js"
+    ></script>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body style="margin: 0" <noscript="">
+    You need to enable JavaScript to run this app.
     <div id="root"></div>
     <!--
       This HTML file is a template.
